--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-    <title>Macbro</title>
+    <title>MacBro</title>
+    <link rel="icon" href="https://cdn4.iconfinder.com/data/icons/MacBook_Pro/512/off.png">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -30,8 +31,11 @@
                     </ul>
                 </div>
                 <div class="hero__info col-6">
-                    <div class="title-holder">
-
+                    <div class="d-flex">
+                        <div class="title-holder">
+    
+                        </div>
+                        <i class='bx bx-link-external'></i>
                     </div>
                     <div class="hero__container">
                         <h3 class="hero__small-title">
