added js of external btn

--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
                         <div class="title-holder">
 
                         </div>
-                        <i class='bx bx-link-external'></i>
+                        <button class="external-btn">
+                            <i class='bx bx-link-external'></i>
+                        </button>
                     </div>
                     <div class="hero__container">
                         <h3 class="hero__small-title">
