--- a/index.html
+++ b/index.html
@@ -185,6 +185,332 @@
         </div>
     </section>
 
+    <!-- Modal end -->
+    <!-- Desc start -->
+
+    <section id="desc" class="desc">
+        <div class="container">
+            <div class="desc__btn-holder d-flex align-items-center">
+                <button class="desc__summary">
+                    Tahlil
+                </button>
+                <button class="desc__spec">
+                    Texnik xususiyatlari
+                </button>
+                <span class="desc__color"></span>
+            </div>
+            <div class="desc__summary-info show-it">
+                <p class="desc__summary-text">
+                    Eng ingichka va yengil Apple noutbuki endi M1 chipi tufayli yanada kuchliroq ishlaydi. 8 yadroli protsessor sizning vazifalaringizni katta tezlik blan amalga oshiradi. 8 yadroli GPU-ning to'liq quvvatidan foydalanib, grafikani talab qiladigan dasturlar va o'yinlarning keyingi darajasiga chiqing. Mashinani o'rganish uchun 16 yadroli Neural Engine yordamida operatsiyalarini tezlashtiradi va 18 soatgacha zaryad olmasdan ishlaydi. MacBook Air hali ham ixcham, lekin hozir u ancha kuchliroq.
+                </p>
+            </div>
+            <div class="desc__specifications">
+                <p class="desc__spec-text p-0 m-0">
+                    Ekran: 13,3 "(2560x1600)
+                </p>
+                <p class="desc__spec-text p-0 m-0">
+                    Matritsa: IPS
+                </p>
+                <p class="desc__spec-text p-0 m-0">
+                    Protsessor: Apple M1 (8x3200 MGts)
+                </p>
+                <p class="desc__spec-text p-0 m-0">
+                    Video karta: Apple grafikasi 8 yadroli, Apple grafikasi 7 yadroli
+                </p>
+                <p class="desc__spec-text p-0 m-0">
+                    Ulagichlar: Mikrofon / naushniklar kombinatsiyasi, Thunderbolt / USB 4 x 2
+                </p>
+                <p class="desc__spec-text p-0 m-0">
+                    USB Type-C funktsiyasi: Quvvatni etkazib berish, Thunderbolt 3, Thunderbolt 4
+                </p>
+                <p class="desc__spec-text p-0 m-0">
+                    Simsiz interfeyslar: Wi-Fi 802.11ax, Bluetooth 5.0
+                </p>
+                <p class="desc__spec-text p-0 m-0">
+                    Batareya quvvati: 49,9 Wh
+                </p>
+                <p class="desc__spec-text p-0 m-0">
+                    Ish vaqti: 18 soat
+                </p>
+                <p class="desc__spec-text p-0 m-0">
+                    Operatsion tizim: macOS
+                </p>
+                <p class="desc__spec-text p-0 m-0">
+                    Hajmi: 304.1x212.4x16.1 mm
+                </p>
+                <p class="desc__spec-text p-0 m-0">
+                    Og'irligi: 1,29 kg
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Desc end -->
+    <!-- Similar start -->
+
+    <section id="similar" class="similar position-relative">
+        <div class="container">
+            <h2 class="similar__title">
+                O'xshash mahsulotlar
+            </h2>
+            <div class="similar__list-holder position-relative">
+                <ul class="similar__list">
+                    <li class="similar__item col-4">
+                        <button class="similar__btn">
+                            <div class="similar__img-container">    
+                                <img src="https://cdn.macbro.uz/macbro/ad319481-63dc-4bc2-bf4d-7a6c7aec02f5" alt="computer">
+                            </div>
+                            <p class="similar__name">
+                                MacBook Pro 13" (with M1)
+                            </p>
+                            <span class="similar__price">
+                                14 949 500
+                            </span>
+                        </button>
+                    </li>
+                    <li class="similar__item col-4">
+                        <button class="similar__btn">
+                            <div class="similar__img-container">    
+                                <img src="https://cdn.macbro.uz/macbro/68a37b19-71f9-4342-addb-eae078edf11e" alt="computer">
+                            </div>
+                            <p class="similar__name">
+                                MacBook Air 13" (with Intel)
+                            </p>
+                        </button>
+                    </li>
+                    <li class="similar__item col-4">
+                        <button class="similar__btn">
+                            <div class="similar__img-container">    
+                                <img src="https://cdn.macbro.uz/macbro/98128be6-9be6-4691-a236-ea092158ed2a" alt="computer">
+                            </div>
+                            <p class="similar__name">
+                                MacBook Pro 13-inch (with Intel)
+                            </p>
+                        </button>
+                    </li>
+                    <li class="similar__item col-4">
+                        <button class="similar__btn">
+                            <div class="similar__img-container">    
+                                <img src="https://cdn.macbro.uz/macbro/6d8aecc6-0e5e-40b5-b33d-3d9774f4208d" alt="computer">
+                            </div>
+                            <p class="similar__name">
+                                MacBook Pro 16-inch
+                            </p>
+                            <span class="similar__price">
+                                25 694 000 so'm
+                            </span>
+                        </button>
+                    </li>
+                    <li class="similar__item col-4">
+                        <button class="similar__btn">
+                            <div class="similar__img-container">    
+                                <img src="https://cdn.macbro.uz/macbro/c9ad4d28-1980-4eaf-8b38-8007adcdf12e" alt="computer">
+                            </div>
+                            <p class="similar__name">
+                                Mac mini
+                            </p>
+                            <span class="similar__price">
+                                9 110 000
+                            </span>
+                        </button>
+                    </li>
+                    <li class="similar__item col-4">
+                        <button class="similar__btn">
+                            <div class="similar__img-container">    
+                                <img src="https://cdn.macbro.uz/macbro/955623b2-fcab-4ff4-9b70-459ef3c8e905" alt="computer">
+                            </div>
+                            <p class="similar__name">
+                                iMac 24 
+                            </p>
+                            <span class="similar__price">
+                                19 270 500 so'm
+                            </span>
+                        </button>
+                    </li>
+                    <li class="similar__item col-4">
+                        <button class="similar__btn">
+                            <div class="similar__img-container">    
+                                <img src="https://cdn.macbro.uz/macbro/46c341eb-d0ca-448a-a547-f6f45d6ba95a" alt="computer">
+                            </div>
+                            <p class="similar__name">
+                                iMac 27
+                            </p>
+                            <span class="similar__price">
+                                22 190 500 so'm
+                            </span>
+                        </button>
+                    </li>
+                    <li class="similar__item col-4">
+                        <button class="similar__btn">
+                            <div class="similar__img-container">    
+                                <img src="https://cdn.macbro.uz/macbro/0dafb741-6d31-43d6-b824-0b1ba4422271" alt="computer">
+                            </div>
+                            <p class="similar__name">
+                                MacBook Pro 14-inch
+                            </p>
+                            <span class="similar__price">
+                                23 358 000 so'm
+                            </span>
+                        </button>
+                    </li>
+                    <li class="similar__item col-4">
+                        <button class="similar__btn">
+                            <div class="similar__img-container">    
+                                <img src="https://cdn.macbro.uz/macbro/b9c18548-4286-4fd8-91ce-d89903f46e64" alt="computer">
+                            </div>
+                            <p class="similar__name">
+                                MacBook Pro 16-inch
+                            </p>
+                            <span class="similar__price">
+                                28 614 000 so'm
+                            </span>
+                        </button>
+                    </li>
+                    <li class="similar__item col-4">
+                        <button class="similar__btn">
+                            <div class="similar__img-container">    
+                                <img src="https://cdn.macbro.uz/macbro/df7ae0bb-ff0d-40b0-8fe8-d52c4a38d884" alt="computer">
+                            </div>
+                            <p class="similar__name">
+                                iMac 21
+                            </p>
+                        </button>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <button class="arrow-btn left">
+            <i class='bx bx-chevron-left'></i>
+        </button>
+        <button class="arrow-btn right">
+            <i class='bx bx-chevron-right'></i>
+        </button>
+    </section>
+
+    <!-- Similar end -->
+    <!-- Footer start -->
+
+    <footer class="site-footer footer">
+        <div class="container">
+            <ul class="footer__list d-flex">
+                <li class="footer__item col-3">
+                    <h3 class="footer__title">
+                        Sotib ol
+                    </h3>
+                    <ul class="footer__inner-list">
+                        <li class="footer__inner-item">
+                            <a href="#" class="footer__link">
+                                Mac
+                            </a>
+                        </li>
+                        <li class="footer__inner-item">
+                            <a href="#" class="footer__link">
+                                iPad
+                            </a>
+                        </li>
+                        <li class="footer__inner-item">
+                            <a href="#" class="footer__link">
+                                iPhone
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="footer__item col-3">
+                    <h3 class="footer__title">
+                        Kompaniya
+                    </h3>
+                    <ul class="footer__inner-list">
+                        <li class="footer__inner-item">
+                            <a href="#" class="footer__link">
+                                Yangiliklar
+                            </a>
+                        </li>
+                        <li class="footer__inner-item">
+                            <a href="#" class="footer__link">
+                                Kompaniya haqida
+                            </a>
+                        </li>
+                        <li class="footer__inner-item">
+                            <a href="#" class="footer__link">
+                                Do'kon manzillari
+                            </a>
+                        </li>
+                        <li class="footer__inner-item">
+                            <a href="#" class="footer__link">
+                                Biznes uchun
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="footer__item col-3">
+                    <h3 class="footer__title">
+                        Ma'lumot
+                    </h3>
+                    <ul class="footer__inner-list">
+                        <li class="footer__inner-item">
+                            <a href="#" class="footer__link">
+                                Muddatli to'lov
+                            </a>
+                        </li>
+                        <li class="footer__inner-item">
+                            <a href="#" class="footer__link">
+                                Yetkazib berish
+                            </a>
+                        </li>
+                        <li class="footer__inner-item">
+                            <a href="#" class="footer__link">
+                                Aloqa
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="footer__item col-3">
+                    <h3 class="footer__title">
+                        Biz bilan bog'laning
+                    </h3>
+                    <ul class="footer__inner-list d-flex align-items-center">
+                        <li class="footer__inner-item social-item">
+                            <a href="#" class="footer__link">
+                                <i class='bx bxl-facebook-square'></i>
+                            </a>
+                        </li>
+                        <li class="footer__inner-item social-item">
+                            <a href="#" class="footer__link">
+                                <i class='bx bxl-instagram' ></i>
+                            </a>
+                        </li>
+                        <li class="footer__inner-item social-item">
+                            <a href="#" class="footer__link">
+                                <i class='bx bxl-telegram'></i>
+                            </a>
+                        </li>
+                        <li class="footer__inner-item social-item">
+                            <a href="#" class="footer__link">
+                                <i class='bx bxl-youtube'></i>
+                            </a>
+                        </li>
+                        <li class="footer__inner-item social-item">
+                            <a href="#" class="footer__link">
+                                <i class='bx bxl-tiktok' ></i>
+                            </a>
+                        </li>
+                    </ul>
+                    <a class="footer__tel" href="tel:+998787772020">
+                        +998 78 777 20 20
+                    </a>
+                </li>
+            </ul>
+            <div class="footer__bottom d-flex align-items-center justify-content-between">
+                <p class="footer__text">
+                    Onlayn do'kon MacBro.uz. Barcha huquqlar himoyalangan.
+                </p>
+                <p class="footer__text">
+                    Developed by Udevs
+                </p>
+            </div>
+        </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
