--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </nav>
         <div class="container">
             <div class="hero__whole-container d-flex align-items-center">
-                <div class="hero__img-holder col-6">
+                <div class="hero__img-holder col-12 col-lg-6">
                     <div class="hero__smth position-relative">
                         <div class="hero__big-img-holder d-flex">
 
@@ -73,7 +73,7 @@
 
                     </ul>
                 </div>
-                <div class="hero__info col-6">
+                <div class="hero__info col-12 col-lg-6">
                     <div class="d-flex">
                         <div class="title-holder">
 
@@ -255,7 +255,7 @@
             </h2>
             <div class="similar__list-holder position-relative">
                 <ul class="similar__list">
-                    <li class="similar__item col-4">
+                    <li class="similar__item col-12 col-sm-6 col-lg-4">
                         <button class="similar__btn">
                             <div class="similar__img-container">    
                                 <img src="https://cdn.macbro.uz/macbro/ad319481-63dc-4bc2-bf4d-7a6c7aec02f5" alt="computer">
@@ -268,7 +268,7 @@
                             </span>
                         </button>
                     </li>
-                    <li class="similar__item col-4">
+                    <li class="similar__item col-12 col-sm-6 col-lg-4">
                         <button class="similar__btn">
                             <div class="similar__img-container">    
                                 <img src="https://cdn.macbro.uz/macbro/68a37b19-71f9-4342-addb-eae078edf11e" alt="computer">
@@ -278,7 +278,7 @@
                             </p>
                         </button>
                     </li>
-                    <li class="similar__item col-4">
+                    <li class="similar__item col-12 col-sm-6 col-lg-4">
                         <button class="similar__btn">
                             <div class="similar__img-container">    
                                 <img src="https://cdn.macbro.uz/macbro/98128be6-9be6-4691-a236-ea092158ed2a" alt="computer">
@@ -288,7 +288,7 @@
                             </p>
                         </button>
                     </li>
-                    <li class="similar__item col-4">
+                    <li class="similar__item col-12 col-sm-6 col-lg-4">
                         <button class="similar__btn">
                             <div class="similar__img-container">    
                                 <img src="https://cdn.macbro.uz/macbro/6d8aecc6-0e5e-40b5-b33d-3d9774f4208d" alt="computer">
@@ -301,7 +301,7 @@
                             </span>
                         </button>
                     </li>
-                    <li class="similar__item col-4">
+                    <li class="similar__item col-12 col-sm-6 col-lg-4">
                         <button class="similar__btn">
                             <div class="similar__img-container">    
                                 <img src="https://cdn.macbro.uz/macbro/c9ad4d28-1980-4eaf-8b38-8007adcdf12e" alt="computer">
@@ -314,7 +314,7 @@
                             </span>
                         </button>
                     </li>
-                    <li class="similar__item col-4">
+                    <li class="similar__item col-12 col-sm-6 col-lg-4">
                         <button class="similar__btn">
                             <div class="similar__img-container">    
                                 <img src="https://cdn.macbro.uz/macbro/955623b2-fcab-4ff4-9b70-459ef3c8e905" alt="computer">
@@ -327,7 +327,7 @@
                             </span>
                         </button>
                     </li>
-                    <li class="similar__item col-4">
+                    <li class="similar__item col-12 col-sm-6 col-lg-4">
                         <button class="similar__btn">
                             <div class="similar__img-container">    
                                 <img src="https://cdn.macbro.uz/macbro/46c341eb-d0ca-448a-a547-f6f45d6ba95a" alt="computer">
@@ -340,7 +340,7 @@
                             </span>
                         </button>
                     </li>
-                    <li class="similar__item col-4">
+                    <li class="similar__item col-12 col-sm-6 col-lg-4">
                         <button class="similar__btn">
                             <div class="similar__img-container">    
                                 <img src="https://cdn.macbro.uz/macbro/0dafb741-6d31-43d6-b824-0b1ba4422271" alt="computer">
@@ -353,7 +353,7 @@
                             </span>
                         </button>
                     </li>
-                    <li class="similar__item col-4">
+                    <li class="similar__item col-12 col-sm-6 col-lg-4">
                         <button class="similar__btn">
                             <div class="similar__img-container">    
                                 <img src="https://cdn.macbro.uz/macbro/b9c18548-4286-4fd8-91ce-d89903f46e64" alt="computer">
@@ -366,7 +366,7 @@
                             </span>
                         </button>
                     </li>
-                    <li class="similar__item col-4">
+                    <li class="similar__item col-12 col-sm-6 col-lg-4">
                         <button class="similar__btn">
                             <div class="similar__img-container">    
                                 <img src="https://cdn.macbro.uz/macbro/df7ae0bb-ff0d-40b0-8fe8-d52c4a38d884" alt="computer">
@@ -392,8 +392,8 @@
 
     <footer class="site-footer footer">
         <div class="container">
-            <ul class="footer__list d-flex">
-                <li class="footer__item col-3">
+            <ul class="footer__list d-flex flex-wrap">
+                <li class="footer__item col-6 col-lg-3">
                     <h3 class="footer__title">
                         Sotib ol
                     </h3>
@@ -415,7 +415,7 @@
                         </li>
                     </ul>
                 </li>
-                <li class="footer__item col-3">
+                <li class="footer__item col-6 col-lg-3">
                     <h3 class="footer__title">
                         Kompaniya
                     </h3>
@@ -442,7 +442,7 @@
                         </li>
                     </ul>
                 </li>
-                <li class="footer__item col-3">
+                <li class="footer__item col-6 col-lg-3">
                     <h3 class="footer__title">
                         Ma'lumot
                     </h3>
@@ -464,7 +464,7 @@
                         </li>
                     </ul>
                 </li>
-                <li class="footer__item col-3">
+                <li class="footer__item col-6 col-lg-3">
                     <h3 class="footer__title">
                         Biz bilan bog'laning
                     </h3>
