Added a udevs link to the footer

--- a/index.html
+++ b/index.html
@@ -505,7 +505,10 @@
                     Onlayn do'kon MacBro.uz. Barcha huquqlar himoyalangan.
                 </p>
                 <p class="footer__text">
-                    Developed by Udevs
+                    Developed by 
+                    <a class="footer__udevs" href="#">
+                        Udevs
+                    </a>
                 </p>
             </div>
         </div>
